Ignore files not used in production

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "README.md",
+    "index.html",
+    "package.json"
   ]
 }
