--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ env:
 
 install:
   - npm install
-  - ./node_modules/.bin/mozilla-download ./firefox/ --branch=nightly --channel=prerelease
-  - export FIREFOX_NIGHTLY_BIN="./firefox/firefox-bin"
+  - ./node_modules/.bin/mozilla-download ./firefox/ --product firefox --branch mozilla-central
+  - export FIREFOX_NIGHTLY_BIN="./firefox/firefox/firefox-bin"
 
 before_script:
   - export DISPLAY=:99.0
