--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "font-fit",
-  "homepage": "https://github.com/gaia-components/font-fit",
+  "homepage": "https://github.com/fxos-components/font-fit",
   "version": "0.3.1",
   "main": "font-fit.js",
   "directories": {
@@ -9,12 +9,14 @@
   },
   "devDependencies": {
     "bower": "^1.3.5",
-    "browserify": "^5.11.2",
-    "karma": "^0.12.16",
+    "chai": "^3.4.1",
+    "karma": "^0.13.15",
+    "karma-chai-sinon": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
-    "karma-mocha": "^0.1.3",
-    "karma-sinon-chai": "^0.1.6",
-    "mozilla-download": "^1.0.5"
+    "karma-mocha": "^0.2.1",
+    "mozilla-download": "^1.0.5",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0"
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start test/karma.conf.js --single-run",
@@ -22,9 +24,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/gaia-components/font-fit.git"
+    "url": "git://github.com/fxos-components/font-fit.git"
   },
   "bugs": {
-    "url": "https://github.com/gaia-components/font-fit/issues"
+    "url": "https://github.com/fxos-components/font-fit/issues"
   }
 }
