--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "karma-chai-sinon": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.2.1",
+    "mocha": "^2.3.4",
     "mozilla-download": "^1.0.5",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0"
