--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 language: node_js
 
 node_js:
-  - '5.1.0'
+  - 5.1.0
 
-env:
-  - TEST_SUITE=unit
-
-install:
-  - npm install
-  - ./node_modules/.bin/mozilla-download ./firefox/ --product firefox --branch mozilla-central
-  - export FIREFOX_NIGHTLY_BIN="./firefox/firefox/firefox-bin"
+addons:
+  firefox: latest
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 
 before_script:
+  - export CHROME_BIN=$(which google-chrome-stable)
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-
-script: "npm test"
