--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "chai": "^3.4.1",
     "karma": "^0.13.15",
     "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^0.2.2",
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.2.1",
     "mocha": "^2.3.4",
-    "mozilla-download": "^1.0.5",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0"
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start test/karma.conf.js --single-run",
-    "test-dev": "./node_modules/karma/bin/karma start test/karma.conf.js"
+    "test-dev": "./node_modules/karma/bin/karma start test/karma.conf.js --browsers Firefox"
   },
   "repository": {
     "type": "git",
